# property-rental-manager

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  main.py  models.py  routers.py  schemas.py  security.py  settings.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2024-07-04_initial.py  v01_initial.py
backend/app/users/: dependencies.py  models.py  router.py  schemas.py  services.py
